--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -8,11 +8,11 @@
     --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono",
         "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-    --foreground-rgb: 0, 0, 0;
+    /* --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
+    --background-end-rgb: 255, 255, 255; */
 
-    --primary-glow: conic-gradient(
+    /* --primary-glow: conic-gradient(
         from 180deg at 50% 50%,
         #16abff33 0deg,
         #0885ff33 55deg,
@@ -20,11 +20,11 @@
         #0071ff33 160deg,
         transparent 360deg
     );
-    --secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-
+    --secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)); */
+/* 
     --tile-start-rgb: 239, 245, 249;
     --tile-end-rgb: 228, 232, 233;
-    --tile-border: conic-gradient(#00000080, #00000040, #00000030, #00000020, #00000010, #00000010, #00000080);
+    --tile-border: conic-gradient(#00000080, #00000040, #00000030, #00000020, #00000010, #00000010, #00000080); */
 
     --callout-rgb: 238, 240, 241;
     --callout-border-rgb: 172, 175, 176;
@@ -38,13 +38,13 @@
         --background-start-rgb: 0, 0, 0;
         --background-end-rgb: 0, 0, 0;
 
-        --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+        /* --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
         --secondary-glow: linear-gradient(
             to bottom right,
             rgba(1, 65, 255, 0),
             rgba(1, 65, 255, 0),
             rgba(1, 65, 255, 0.3)
-        );
+        ); */
 
         --tile-start-rgb: 2, 13, 46;
         --tile-end-rgb: 2, 5, 19;
